--- a/emcr-dfa-poc18/emcr-dfa-poc18.csproj
+++ b/emcr-dfa-poc18/emcr-dfa-poc18.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="pdf-service\pdf-service.csproj" />
+    <ProjectReference Include="..\pdf-service\pdf-service.csproj" />
   </ItemGroup>
 
 </Project>
