[EMCRI-135] Prepare PDF Service for DevOps

--- a/emcr-dfa-poc18/appsettings.json
+++ b/emcr-dfa-poc18/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WebDefaults": {
+    "PDFServiceUri": "https://localhost:8080",
+    "PDFServiceSecret": "",
+    "PDFServiceToken":  ""
+  }
 }
