--- a/emcr-dfa-poc18/appsettings.json
+++ b/emcr-dfa-poc18/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "WebDefaults": {
-    "PDFServiceUri": "https://localhost:53091",
+    //"PDFServiceUri": "https://localhost:53091",
+    "PDFServiceUri": "https://dfa-public-sector-pdf-test.apps.silver.devops.gov.bc.ca",
     "PDFServiceSecret": "",
     "PDFServiceToken": ""
   }
